Install GPG tools

--- a/init/osx/Brewfile
+++ b/init/osx/Brewfile
@@ -3,10 +3,12 @@ cask_args appdir: '/Applications'
 tap 'homebrew/bundle'
 
 brew 'coreutils'
+brew 'gnupg2'
 brew 'httpie'
 brew 'imagemagick'
 brew 'node'
 brew 'pandoc'
+brew 'pinentry-mac'
 brew 'the_silver_searcher'
 brew 'tree'
 brew 'wget'
