--- a/_init/osx/Brewfile
+++ b/_init/osx/Brewfile
@@ -7,6 +7,7 @@ brew 'coreutils'
 brew 'gnupg2'
 brew 'httpie'
 brew 'imagemagick'
+brew 'moreutils'
 brew 'node'
 brew 'pandoc'
 brew 'pinentry-mac'
