--- a/_macOS/Brewfile
+++ b/_macOS/Brewfile
@@ -7,6 +7,7 @@ brew 'coreutils'
 brew 'gnupg2'
 brew 'httpie'
 brew 'imagemagick'
+brew 'libav'
 brew 'moreutils'
 brew 'node'
 brew 'pandoc'
@@ -14,6 +15,7 @@ brew 'pinentry-mac'
 brew 'the_silver_searcher'
 brew 'tree'
 brew 'wget'
+brew 'youtube-dl'
 
 cask 'iterm2'
 cask 'vlc'
