--- a/_setup/_macOS/Brewfile
+++ b/_setup/_macOS/Brewfile
@@ -17,6 +17,7 @@ brew 'tree'
 brew 'wget'
 brew 'youtube-dl'
 
-cask 'iterm2'
-cask 'vlc'
 cask 'dropbox'
+cask 'iterm2'
+cask 'keybase'
+cask 'vlc'
