Add Gimp + Inkscape

--- a/_setup/_macOS/Brewfile
+++ b/_setup/_macOS/Brewfile
@@ -18,8 +18,11 @@ brew 'wget'
 brew 'youtube-dl'
 
 cask 'dropbox'
+cask 'gimp'
+cask 'inkscape'
 cask 'iterm2'
 cask 'keybase'
 cask 'mounty'
 cask 'transmission'
 cask 'vlc'
+cask 'xquartz'
