--- a/_setup/_macOS/Brewfile
+++ b/_setup/_macOS/Brewfile
@@ -4,6 +4,7 @@ tap 'homebrew/bundle'
 
 brew 'bash-completion'
 brew 'coreutils'
+brew 'ghostscript'
 brew 'gnupg2'
 brew 'httpie'
 brew 'imagemagick'
@@ -23,6 +24,7 @@ cask 'inkscape'
 cask 'iterm2'
 cask 'keybase'
 cask 'mounty'
+cask 'spotify'
 cask 'transmission'
 cask 'vlc'
 cask 'xquartz'
