--- a/_setup/_macOS/Brewfile
+++ b/_setup/_macOS/Brewfile
@@ -14,6 +14,7 @@ brew 'moreutils'
 brew 'node'
 brew 'pandoc'
 brew 'pinentry-mac'
+brew 'rsync'
 brew 'the_silver_searcher'
 brew 'tree'
 brew 'wget'
