--- a/_setup/_macOS/Brewfile
+++ b/_setup/_macOS/Brewfile
@@ -14,6 +14,7 @@ brew 'moreutils'
 brew 'node'
 brew 'pandoc'
 brew 'pinentry-mac'
+brew 'ripgrep'
 brew 'rsync'
 brew 'the_silver_searcher'
 brew 'tree'
@@ -24,6 +25,7 @@ brew 'youtube-dl'
 cask 'balenaetcher'
 cask 'dropbox'
 cask 'gimp'
+cask 'google-chrome'
 cask 'inkscape'
 cask 'iterm2'
 cask 'keybase'
