--- a/_setup/_macOS/Brewfile
+++ b/_setup/_macOS/Brewfile
@@ -2,10 +2,12 @@ cask_args appdir: '/Applications'
 
 tap 'homebrew/bundle'
 
+brew 'borkdude/brew/babashka'
 brew 'bash-completion'
 brew 'coreutils'
 brew 'ghostscript'
 brew 'gnupg2'
+brew 'graphviz'
 brew 'httpie'
 brew 'imagemagick'
 brew 'jq'
@@ -22,6 +24,8 @@ brew 'wget'
 brew 'yarn'
 brew 'youtube-dl'
 
+
+
 cask 'balenaetcher'
 cask 'dropbox'
 cask 'gimp'
@@ -30,6 +34,7 @@ cask 'inkscape'
 cask 'iterm2'
 cask 'keybase'
 cask 'mounty'
+cask 'skype'
 cask 'spotify'
 cask 'transmission'
 cask 'vlc'
