--- a/_setup/_macOS/Brewfile
+++ b/_setup/_macOS/Brewfile
@@ -5,6 +5,8 @@ tap 'homebrew/bundle'
 brew 'awscli'
 brew 'borkdude/brew/babashka'
 brew 'bash-completion'
+brew 'clojure/tools/clojure'
+brew 'cmake'
 brew 'coreutils'
 brew 'ghostscript'
 brew 'gnupg2'
@@ -13,6 +15,7 @@ brew 'httpie'
 brew 'imagemagick'
 brew 'jq'
 brew 'libav'
+brew 'libvterm'
 brew 'moreutils'
 brew 'node'
 brew 'pandoc'
@@ -26,9 +29,9 @@ brew 'yarn'
 brew 'youtube-dl'
 
 
-
 cask 'balenaetcher'
 cask 'basictex'
+cask 'google-cloud-sdk'
 cask 'dropbox'
 cask 'gimp'
 cask 'google-chrome'
