--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 .DS_Store
 /emacs/.emacs.d/%backup%~
 /emacs/.emacs.d/custom.el
+/emacs/.emacs.d/straight/build*/
+/emacs/.emacs.d/straight/build*-cache.el
