--- a/_setup/_macOS/Brewfile
+++ b/_setup/_macOS/Brewfile
@@ -23,6 +23,7 @@ brew 'pandoc'
 brew 'pinentry-mac'
 brew 'ripgrep'
 brew 'rsync'
+brew 'stow'
 brew 'the_silver_searcher'
 brew 'tree'
 brew 'wget'
