--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ emacs/.emacs.d/custom.el
 emacs/.emacs.d/var/
 emacs/.emacs.d/straight/*
 !emacs/.emacs.d/straight/versions/
+/emacs/.emacs.d/.cache/
